# camlVenture

./: Makefile  README.md  gallery.yaml
camlventure/: INSTALL.md  Makefile  camlventure.opam  dune-project  opendoc.sh
camlventure/data/: lore.json  map_instructions.json  names.json
camlventure/data/ascii/: battle_template.txt  blackbox.txt  camel.txt  cat.txt  clarkson.txt  doenges.txt  ducky.txt  glassbox.txt  hackling.txt  hashtable.txt  heron.txt  iclicker.txt  lambda.txt  ocaml.txt  player_lose.txt  player_win.txt  promise.txt  rbtree.txt  wild.txt
camlventure/data/camon/: blackbox.json  camel.json  cat.json  ducky.json  glassbox.json  hashtable.json  heron.json  iclicker.json  jocalf.json  lambda.json  monad.json  ocaml.json  option.json  promise.json  rbtree.json  schema.json  three_humped_camel.json  unit1.json  unit2.json  unit3.json
camlventure/data/trainer/: base.json  clarkson.json  doenges.json  emily.json  hackling.json  null.json  schema.json
camlventure/src/: ascii.ml  ascii.mli  battle.ml  battle.mli  command.ml  command.mli  display.ml  display.mli  dune  trainerstate.ml  trainerstate.mli  ui.ml  ui.mli
camlventure/test/: dune  main.ml
